--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://seaweber.github.io/CIT499-Homework-Refresher/",
   "name": "homework-refresher",
   "version": "0.1.0",
   "private": true,
